@@ -1,0 +1,6 @@
+The CommonMark specification defines a rationalized version of
+markdown syntax. This package uses the 'cmark' reference
+implementation for converting markdown text into various formats
+including html, latex and groff man. In addition it exposes the
+markdown parse tree in xml format. Also includes opt-in support for
+GFM extensions including tables, autolinks, and strikethrough text.
