@@ -1,0 +1,14 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 18:31:59 brook Exp $
+
+R_PKGNAME=	commonmark
+R_PKGVER=	1.7
+CATEGORIES=	textproc
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	High performance commonmark and Github Markdown rendering in R
+LICENSE=	2-clause-bsd
+
+USE_LANGUAGES=	c
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
