@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 18:31:59 brook Exp $
+
+SHA1 (R/commonmark_1.7.tar.gz) = d984332dd8a35112baeb14a86c74b8da3f6effbb
+RMD160 (R/commonmark_1.7.tar.gz) = 70139893268a6355fc7a69c4fb3e0a3b9d6b050a
+SHA512 (R/commonmark_1.7.tar.gz) = 23f384bae4cc46153f3dc61599234a17a04c9fef2eae0dca744a9a8b43768f8f96f779a0fbb7c3ff9f6ba39d3f3512bb382b32960bf2875cc5a5bb8de4ece5e9
+Size (R/commonmark_1.7.tar.gz) = 134002 bytes
